--- a/templates/upload.html
+++ b/templates/upload.html
@@ -1,23 +1,17 @@
-<!doctype html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>UPLOAD</title>
-</head>
-<body>
-</body>
-</html>
+{% extends 'inner-page.html' %}
 
+{% block body %}
 
+    <!---Upload image--->
 
+    <form method="post" enctype="multipart/form-data" class="text-center d-block m-auto mb-4">
+        {% csrf_token %}
 
+         <h2>Upload Image</h2>
+        {{ form.as_p }}
+        <button type="submit">Upload</button>
+        <a href="{% url 'image' %}" class="btn btn-warning">Display images</a>
+    </form>
+    
+{% endblock %}
 
-
-
-<!----method post
-crsf_token
-name attribute
-button type
